same-footer-color

--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -58,7 +58,7 @@
           <p>
             <a style="margin:5px;color:white " href="/index.html">home</a>
             <a style="margin:5px;color:white " href="/search.html">search</a>
-            <a style="margin:5px;color:white " href="/about.html">about</a>
+            <a style="margin:5px;color:white " href="#">about</a>
           </p>
         </div>
       </div>
@@ -118,13 +118,14 @@
 
     </div>
   </div>
-  <footer style="padding-bottom:5px;background-image: linear-gradient(#7391ff, #625354);">
-    <div class="container">
+	<!-- <footer style="padding-bottom:5px;background-image: linear-gradient(#7391ff, #625354);"> -->
+  <footer style="padding-bottom:5px;background-color: rgba(66,109,148,0.8)">
+			<!-- <div class="container"> -->
+				<div class="container-fluid" >
       <div class="row">
         <div class="col-12">
           <h6 style="color:white">Work on this site is supported by NSF EarthCube</h6>
-          <h6 style="color:grey">Simple Grid by <a style="color:grey" href="http://zcole.me" target="_blank">Zach
-              Cole</a>
+					<!-- <h6 style="color:grey">Simple Grid by <a style="color:grey" href="http://zcole.me" target="_blank">Zach Cole</a> -->
             Open source under the <a style="color:grey" href="https://opensource.org/licenses/MIT" target="_blank">MIT
               License</a>
           </h6>
