Added settings.orderByOptionsSort for acsending and descending default option.

--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -412,6 +412,14 @@
                             //'RANDOM': 'Score'
                             'score': 'Score'
                         },
+                        orderByOptionsSort: {
+                            'name': 'acs',
+                            'pubname': 'acs',
+                            'date': 'acs',
+                            // 'subj': 'Subject',
+                            //'RANDOM': 'Score'
+                            'score': 'desc'
+                        },
                         facetSortOption: {'continent': ["North America", "South America"]}
                     };
 
