Update layouts. Add Geocodes a search to all navs

--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -150,6 +150,9 @@
             </ul>
 
         </div>
+
+        <div class="navbar-text font-weight-bold">GeoCODES <span class="font-weight-normal font-italic"> a schema.org/Dataset search</span>
+        </div>
     </nav>
 
 
