--- a/alpha/website/landing.html
+++ b/alpha/website/landing.html
@@ -45,6 +45,8 @@
             <!--                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
             <!--            </form>-->
         </div>
+        <div class="navbar-text font-weight-bold">GeoCODES <span class="font-weight-normal font-italic"> a schema.org/Dataset search</span>
+        </div>
     </nav>
 
     <div class="row  mb-3  mt-3 d-flex justify-content-center">
