geocodes paragraph+link

--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -129,6 +129,22 @@
 		</tr>
 		  </tbody>
 </table>
+<p>
+<p class="font_7" style="font-size:26px"><span style="font-size:26px"><span style="font-weight:bold"><span class="color_15"><a href=https://www.earthcube.org/geocodes>What is GeoCODES?</a></span></span></span></p>
+
+<p class="font_7" style="font-size:18px"><span style="font-size:18px"><span style="font-weight:bold"><span class="wixGuard">​</span></span></span></p>
+
+<p class="font_8" style="font-size:18px"><span style="font-size:18px">GeoCODES is an NSF Earthcube program effort to better enable cross-domain discovery of and access to geoscience data and research tools. GeoCODES is made up of three components respectively:</span></p>
+
+<ul class="font_8" style="font-size:18px">
+	<li>
+	<p class="font_8" style="font-size:18px"><span style="font-size:18px">An evolving standard for exposing data called<span style="text-decoration:underline"><a href="https://github.com/ESIPFed/science-on-schema.org" target="_blank" rel="noopener"> science on schema</a></span></span></p>
+	</li>
+	<li>
+	<p class="font_8" style="font-size:18px"><span style="font-size:18px">A set of tools to index relevant data from partners within the Council of Data Facilities who have adopted science on schema, plus a <span style="text-decoration:underline"><a href="https://geocodes.earthcube.org/" target="_blank" rel="noopener">prototype portal</a></span> to query that data</span></p>
+	</li>
+	<li>
+	<p class="font_8" style="font-size:18px"><span style="font-size:18px">A Resource Registry by which to <span style="text-decoration:underline;"><a href="http://tinyurl.com/2register-ecrr" target="_blank" rel="noopener">register</a></span> and <span style="text-decoration:underline"><a href="http://www.earthcube.org/resourceregistry/" target="_blank" rel="noopener">discover</a></span> relevant tools</span></p>
 
             <p> Documentation is in the works for this site.  </p>
 
