--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -76,6 +76,7 @@
     <div class="row">
         <div class="col-2 hidden-sm"></div>
         <div class="col-8">
+						<p>
             <h3 class="center m-bottom" class="font_7" style="font-size:26px"><span style="font-size:26px"><span style="font-weight:bold"><span class="color_15"><a href=https://www.earthcube.org/geocodes>What is GeoCODES?</a></span></span></span> </h3>
 <p class="font_7" style="font-size:18px"><span style="font-size:18px"><span style="font-weight:bold"><span class="wixGuard">​</span></span></span></p>
 
@@ -86,7 +87,7 @@
 	<p class="font_8" style="font-size:18px"><span style="font-size:18px">An evolving standard for exposing data called<span style="text-decoration:underline"><a href="https://github.com/ESIPFed/science-on-schema.org" target="_blank" rel="noopener"> science on schema</a></span></span></p>
 	</li>
 	<li>
-			<p class="font_8" style="font-size:18px"><span style="font-size:18px">A set of <a href=#tools>tools</a> to index relevant data <a href=#repo-list>from partners</a> within the Council of Data Facilities who have adopted science on schema, plus a <span style="text-decoration:underline"><a href="https://geocodes.earthcube.org/" target="_blank" rel="noopener">prototype portal</a></span> to query that data</span></p>
+			<p class="font_8" style="font-size:18px"><span style="font-size:18px">A set of <a href=#tools>tools</a> to index relevant data <a href=#repo-list>from partners</a> within the Council of Data Facilities who have adopted science on schema, plus a <a href=landing.html>prototype</a> <span style="text-decoration:underline"><a href="https://geocodes.earthcube.org/" target="_blank" rel="noopener">portal</a></span> to query that data</span></p>
 	</li>
 	<li>
 	<p class="font_8" style="font-size:18px"><span style="font-size:18px">A Resource Registry by which to <span style="text-decoration:underline;"><a href="http://tinyurl.com/2register-ecrr" target="_blank" rel="noopener">register</a></span> and <span style="text-decoration:underline"><a href="http://www.earthcube.org/resourceregistry/" target="_blank" rel="noopener">discover</a></span> relevant tools</span></p>
@@ -95,8 +96,11 @@
 
 
 	<p>
+	<p>
+	<p>
+	<p>
 	<h5>
-						<p><a id="repo-list"  href=https://www.earthcube.org/council-of-data-facilities>CDF</a> repositories crawled+indexed:  </p>
+						<p><a id="repo-list"  href=https://www.earthcube.org/council-of-data-facilities>CDF</a> repositories crawled and indexed:  </p>
 	</h5>
 
 <table border="1" class="dataframe">
@@ -108,7 +112,7 @@
 
 <td width=33%><div title="The Biological and Chemical Oceanography Data Management Office (BCO-DMO) was created in late 2006 to serve PIs funded by the NSF Geosciences Directorate (GEO) Division of Ocean Sciences (OCE) Biological and Chemical Oceanography Programs and Office of Polar Programs (OPP) Antarctic Sciences (ANT) Organisms & Ecosystems Program. The BCO-DMO is a combination the Data Management Offices formerly created to support the US JGOFS and US GLOBEC programs. The BCO-DMO staff members are the curators of the legacy data collections created by those respective programs, as well as many other more recent research efforts including those of individual investigators. [5018 records]"><a href=http://www.bco-dmo.org/><img  style="max-width: 80px; max-height: 40px"  src=http://mbobak-ofc.ncsa.illinois.edu/ext/ec/bco-dmo/logo.png></div>Biological and Chemical Oceanography Data Management Office</a><br><small>[5018 records]</small></td>
 
-<td width=33%><div title="CUAHSI's Hydrologic Information System (CUAHSI-HIS) provides web services, tools, standards and procedures that enhance access to more and better data for hydrologic analysis. [4185 records]"><a href=https://www.cuahsi.org/><img  style="max-width: 80px; max-height: 40px"  src=https://www.hydroshare.org/static/img/logo-lg.png></div>Consortium of Universities for the Advancement of Hydrologic Science, Inc. (CUAHSI)</a> <small>[4185 records]</small></td>
+<td width=33%><div title="CUAHSI's Hydrologic Information System (CUAHSI-HIS) provides web services, tools, standards and procedures that enhance access to more and better data for hydrologic analysis. [4185 records]"><a href=https://www.cuahsi.org/><img  style="max-width: 80px; max-height: 40px"  src=https://www.hydroshare.org/static/img/logo-lg.png></div>Consortium of Universities for the Advancement of Hydrologic Science, Inc. (CUAHSI)</a><br><small>[4185 records]</small></td>
 		</tr> <tr>
 
 				<td width=33%><div title="IEDA is a community-based facility that serves to support, sustain, and advance the geosciences by providing data services for observational Geoscience data from the Ocean, Earth, and Polar Sciences. IEDA welcomes and encourages investigators to contribute their data to the IEDA collections so that the data can be discovered and reused by a diverse community now and in the future. The IEDA collections are: EarthChem, Geochron, System for Earth Sample Registration (SESAR), Marine Geoscience Data System (MGDS), and USAP Data Center. Meta-Search provided on the portal through IEDA Data Browser http://www.iedadata.org/databrowser. [7147 records]"><a href=http://www.iedadata.org/><img  style="max-width: 80px; max-height: 40px"  src=http://mbobak-ofc.ncsa.illinois.edu/ext/ec/iedadata/logo.png></div>IEDA (Integrated Earth Data Applications)</a> <small>[7147 records]</small></td>
@@ -118,7 +122,7 @@
 <td width=33%><div title="UNAVCO promotes research by providing access to data that our community of geodetic scientists uses for quantifying the motions of rock, ice and water that are monitored by a variety of sensor types at or near the Earth's surface. After processing, these data enable millimeter-scale surface motion detection and monitoring at discrete points, and high-resolution strain imagery over areas of tens of square meters to hundreds of square kilometers. The data types include GPS/GNSS, imaging data such as from SAR and TLS, strain and seismic borehole data, and meteorological data. Most of these can be accessed via web services. In addition, GPS/GNSS datasets, TLS datasets, and InSAR products are assigned digital object identifiers. [5086 records]"><a href=http://www.unavco.org/><img  style="max-width: 80px; max-height: 40px"  src=https://www.unavco.org/lib/images/banner/uv-logo.png></div>UNAVCO</a> <small>[5086 records]</small></td>
 		</tr> <tr>
 
-				<td width=33%><div title="The Site Survey Data Bank (SSDB) is a repository for site survey data submitted in support of International Ocean Discovery Program (IODP) proposals and expeditions. SSDB serves different roles for different sets of users. [5344 records]"><a href=https://ssdb.iodp.org/><img  style="max-width: 80px; max-height: 40px"  src=http://ssdb.iodp.org/images/head_logo_PRO.gif></div>IODP Site Survey Databank</a> <small>[5344 records]</small></td>
+				<td width=33%><div title="The Site Survey Data Bank (SSDB) is a repository for site survey data submitted in support of International Ocean Discovery Program (IODP) proposals and expeditions. SSDB serves different roles for different sets of users. [5344 records]"><a href=https://ssdb.iodp.org/><img  style="max-width: 80px; max-height: 40px"  src=http://ssdb.iodp.org/images/head_logo_PRO.gif></div>IODP Site Survey Databank</a><br><small>[5344 records]</small></td>
 
 <td width=33%><div title="Driven by data-rich use cases that span geodesy, geodynamics, seismology, and ecohydrology, the BALTO project will enable brokered access to diverse geoscience data, including data that have been collected/organized by individual scientists in novel or unusual forms, also known as “long-tail” datasets. [89 records]"><a href=http://balto.opendap.org><img  style="max-width: 80px; max-height: 40px"  src=http://balto.opendap.org/opendap/docs/images/logo.png></div>Balto</a> <small>[89 records]</small></td>
 
@@ -148,9 +152,11 @@
 		</tr>
 		  </tbody>
 </table>
+	<p>
+	<p>
+            <p>
             <p id="tools">[Infrastructure] Documentation is in the works for this site.  </p>
 
-            <p>
 
                 <img style="width:600px" src="https://geocodes.earthcube.org/img/geodexv2.png">
                 <a href="./img/geodexv2.png">Image link</a>
@@ -173,10 +179,12 @@
           headless.geodex.org (not public facing in the end)
           </pre>
 
+				<h6>Contact:<a href=https://www.earthcube.org/eco>Development staff</a> for further assistance</h6>
+
+
         </div>
         <div class="col-2 hidden-sm"></div>
     </div>
-
 
 </div>
 <!-- <footer style="padding-bottom:5px;background-image: linear-gradient(#7391ff, #625354);"> -->
