--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -238,32 +238,27 @@
                         PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
                         prefix schema: <http://schema.org/>
                         prefix sschema: <https://schema.org/>
-                        SELECT distinct ?subj ?g ?pubname (GROUP_CONCAT(DISTINCT ?placename; SEPARATOR=", ") AS ?placenames)
+                        SELECT distinct ?subj ?pubname (GROUP_CONCAT(DISTINCT ?placename; SEPARATOR=", ") AS ?placenames)
         (GROUP_CONCAT(DISTINCT ?kwu; SEPARATOR=", ") AS ?kw)
-        ?datep  (MIN(?url) as ?disurl) ?score  ?name ?description ?resourceType ?urlContent ?dis
+        ?datep  (MIN(?url) as ?disurl) ?score  ?name ?description ?resourceType ?g
         WHERE {
             ?lit bds:search \"${q}\" .
             ?lit bds:matchAllTerms "false" .
             ?lit bds:relevance ?score .
             ?subj ?p ?lit .
-
-          BIND ( IF (exists{?subj a schema:Dataset .}||exists{?subj a sschema:Dataset .} , "data", "tool")  AS ?resourceType )
+            optional {?subj schema:distribution/schema:url|schema:subjectOf/schema:url ?url .}
+            BIND ( IF ( exists { ?subj a schema:Dataset .} ||exists{ ?subj a sschema:Dataset .}  , "data", "tool")  AS ?resourceType ).
 
             graph ?g { ?subj schema:description|sschema:description ?description . }
+            ?subj schema:name ?name .
+            ?subj schema:description ?description .
             filter( ?score > 0.04).
-            OPTIONAL { ?subj schema:name ?name .
-                      ?subj schema:datePublished ?datep .
-                      ?subj schema:publisher/schema:name ?pubname .
-                    ?subj schema:spatialCoverage/schema:name ?placename .
-                    ?subj schema:keywords ?kwu .
-                 ?s schema:distribution|sschema:distribution ?dis .
-                ?dis schema:contentUrl |sschema:contentUrl  ?urlContent .
-                ?subj schema:distribution/schema:url|schema:subjectOf/schema:url ?url .
-                  }
-
-
+            OPTIONAL {?subj schema:datePublished ?datep .}
+            OPTIONAL {?subj schema:publisher/schema:name ?pubname .}
+            OPTIONAL {?subj schema:spatialCoverage/schema:name ?placename .}
+            OPTIONAL {?subj schema:keywords ?kwu .}
         }
-        GROUP BY ?subj ?g ?datep ?pubname ?name ?description ?url ?score ?resourceType ?urlContent ?dis
+        GROUP BY ?subj ?datep ?pubname ?name ?description ?url ?score ?resourceType ?g
         ORDER BY DESC(?score)
         LIMIT ${n}
         OFFSET ${o}`
