Make cards have a width of 100%

--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -330,7 +330,7 @@
         }
 
 
-        const item_template = `<div class="item card rounded mt-2">
+        const item_template = `<div class="item card rounded mt-2 w-100">
                 <div class="card-header">
                   <div class="card-title" ><%= obj.name %></div>
                   <div class="card-subtitle mb-2 text-muted"><%= obj.pubname %></div>
