--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -562,7 +562,7 @@
         var gar = String(content).split(":");
         console.log(gar);
 
-        var x = `https://dx.geodex.org/?o=/${gar[gar.length -2]}/${gar[gar.length -1]}.jsonld`;
+        var x = `./dataset.html?o=/${gar[gar.length -2]}/${gar[gar.length -1]}.jsonld`;
 
         var sptxt = _.template(
             `<a  target="_blank" href="<%= x %>"> <span class="badge badge-info">Connected Tools</span></a>
