--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -60,13 +60,36 @@
         </div>
     </nav>
 
-    <div class="row"><h3>About</h3></div>
-    <div class="row">
+    <!-- <div class="row"><h3>About</h3></div>
+    <div class="row"> 
+				<div class="row"> -->
+      <div class="row">
+        <div class="col-2 hidden-sm"></div>
+        <div class="col-8">
+            <h3 class="center m-bottom" class="font_7" style="font-size:26px"><span style="font-size:26px"><span style="font-weight:bold"><span class="color_15"><a href=https://www.earthcube.org/geocodes>What is GeoCODES?</a></span></span></span> </h3>
+<p class="font_7" style="font-size:18px"><span style="font-size:18px"><span style="font-weight:bold"><span class="wixGuard"></span></span></span></p>
 
-        <div class="row">
+<p class="font_8" style="font-size:18px"><span style="font-size:18px">GeoCODES is an NSF Earthcube program effort to better enable cross-domain discovery of and access to geoscience data and research tools. GeoCODES is made up of three components respectively:</span></p>
+
+<ul class="font_8" style="font-size:18px">
+  <li>
+  <p class="font_8" style="font-size:18px"><span style="font-size:18px">An evolving standard for exposing data called<span style="text-decoration:underline"><a href="https://github.com/ESIPFed/science-on-schema.org" target="_blank" rel="noopener"> science on schema</a></span></span></p>
+  </li>
+  <li>
+      <p class="font_8" style="font-size:18px"><span style="font-size:18px">A set of <a href=#tools>tools</a> to index relevant data <a href=#repo-list>from partners</a> within the Council of Data Facilities who have adopted science on schema, plus a <span style="text-decoration:underline"><a href="https://geocodes.earthcube.org/" target="_blank" rel="noopener">prototype portal</a></span> to query that data</span></p>
+  </li>
+  <li>
+  <p class="font_8" style="font-size:18px"><span style="font-size:18px">A Resource Registry by which to <span style="text-decoration:underline;"><a href="http://tinyurl.com/2register-ecrr" target="_blank" rel="noopener">register</a></span> and <span style="text-decoration:underline"><a href="http://www.earthcube.org/resourceregistry/" target="_blank" rel="noopener">discover</a></span> relevant tools</span></p>
+  </li>
+  </ul>
 
 
-            <a href=https://www.earthcube.org/council-of-data-facilities>CDF</a> repositories crawled+indexed:
+  <p>
+
+	 <h5>
+            <p><a id="repo-list"  href=https://www.earthcube.org/council-of-data-facilities>CDF</a> repositories crawled+indexed:  </p>
+  </h5>
+
         </div>
         <div class="row">
         <table border="1" class="dataframe">
@@ -238,7 +261,8 @@
     </div>
     <div class="row">
 
-        <div class="row"><p> Documentation is in the works for this site. </p>
+        <div class="row">
+						<p id="tools">[Infrastructure] Documentation is in the works for this site.  </p>
 
             <p>
 
@@ -277,7 +301,7 @@
 
     <div class="row">
         <div class="col-12">
-            <h6 style="color:white">Work on this site is supported by NSF EarthCube</h6>
+						<h6 style="color:white">Work on this site is supported by NSF EarthCube <img src=https://www.nsf.gov/images/logos/NSF_4-Color_bitmap_Logo.png width=38> NSF 21-515</h6>
             <!-- <h6 style="color:grey">Simple Grid by <a style="color:grey" href="http://zcole.me" target="_blank">Zach Cole</a> -->
             Open source under the <a style="color:grey" href="https://opensource.org/licenses/MIT" target="_blank">MIT
             License</a>
