--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -100,7 +100,7 @@
                     <div title="The Environmental Data Initiative is an NSF-funded project meant to accelerate curation and archive of environmental data, emphasizing data from projects funded by the NSF Division of Environmental Biology. Aside from hosting the LTER data repository and collaborating with the LTER Information Managers, EDI serves the ecological research community including but not limited to research funded by the Long Term Research in Environmental Biology (LTREB), Organization for Biological Field Stations (OBFS), and Macrosystems Biology (MSB). The Environmental Data Initiative maintains and develops the PASTA infrastructure for its data repositories, and has recently become DataONE’s 40th member node.
 . [28248 records]"><a href=http://environmentaldatainitiative.org/>
                         <img style="max-width: 80px; max-height: 40px"
-                             src=https://portal.edirepository.org/nis/images/EDI-logo-300DPI_5.png>
+                             src=images/repo/edi.png>
 
 
                         Environmental Data Initiative</a></div>
@@ -109,7 +109,7 @@
                 <td width=33%>
                     <div title="The Biological and Chemical Oceanography Data Management Office (BCO-DMO) was created in late 2006 to serve PIs funded by the NSF Geosciences Directorate (GEO) Division of Ocean Sciences (OCE) Biological and Chemical Oceanography Programs and Office of Polar Programs (OPP) Antarctic Sciences (ANT) Organisms & Ecosystems Program. The BCO-DMO is a combination the Data Management Offices formerly created to support the US JGOFS and US GLOBEC programs. The BCO-DMO staff members are the curators of the legacy data collections created by those respective programs, as well as many other more recent research efforts including those of individual investigators. [5018 records]">
                         <a href=http://www.bco-dmo.org/><img style="max-width: 80px; max-height: 40px"
-                                                             src=http://mbobak-ofc.ncsa.illinois.edu/ext/ec/bco-dmo/logo.png>
+                                                             src=images/repo/bco-dmo.png>
 
                             Biological and Chemical Oceanography Data Management Office</a></div>
                     <br><small>[5018 records]</small>
@@ -118,7 +118,7 @@
                 <td width=33%>
                     <div title="CUAHSI's Hydrologic Information System (CUAHSI-HIS) provides web services, tools, standards and procedures that enhance access to more and better data for hydrologic analysis. [4185 records]">
                         <a href=https://www.cuahsi.org/><img style="max-width: 80px; max-height: 40px"
-                                                             src=https://www.hydroshare.org/static/img/logo-lg.png>
+                                                             src=images/repo/hydroshare.org.png>
 
                             Consortium of Universities for the Advancement of Hydrologic Science, Inc. (CUAHSI)</a>
                     </div>
@@ -130,7 +130,7 @@
                 <td width=33%>
                     <div title="IEDA is a community-based facility that serves to support, sustain, and advance the geosciences by providing data services for observational Geoscience data from the Ocean, Earth, and Polar Sciences. IEDA welcomes and encourages investigators to contribute their data to the IEDA collections so that the data can be discovered and reused by a diverse community now and in the future. The IEDA collections are: EarthChem, Geochron, System for Earth Sample Registration (SESAR), Marine Geoscience Data System (MGDS), and USAP Data Center. Meta-Search provided on the portal through IEDA Data Browser http://www.iedadata.org/databrowser. [7147 records]">
                         <a href=http://www.iedadata.org/><img style="max-width: 80px; max-height: 40px"
-                                                              src=http://mbobak-ofc.ncsa.illinois.edu/ext/ec/iedadata/logo.png>
+                                                              src=images/repo/iedadata.png>
                             >IEDA (Integrated Earth Data Applications)</a></div>
                     <small>[7147 records]</small></td>
 
@@ -139,14 +139,14 @@
 
                         <a href=http://www.opentopography.org/>
                             <img style="max-width: 80px; max-height: 40px"
-                                 src=https://opentopography.org/sites/opentopography.org/files/ot_transp_logo_2.png>
+                                 src=images/repo/opentopography.png>
                             OpenTopography</a></div>
                     <br><small>[502 records]</small></td>
 
                 <td width=33%>
                     <div title="UNAVCO promotes research by providing access to data that our community of geodetic scientists uses for quantifying the motions of rock, ice and water that are monitored by a variety of sensor types at or near the Earth's surface. After processing, these data enable millimeter-scale surface motion detection and monitoring at discrete points, and high-resolution strain imagery over areas of tens of square meters to hundreds of square kilometers. The data types include GPS/GNSS, imaging data such as from SAR and TLS, strain and seismic borehole data, and meteorological data. Most of these can be accessed via web services. In addition, GPS/GNSS datasets, TLS datasets, and InSAR products are assigned digital object identifiers. [5086 records]">
                         <a href=http://www.unavco.org/><img style="max-width: 80px; max-height: 40px"
-                                                            src=https://www.unavco.org/lib/images/banner/uv-logo.png>
+                                                            src=images/repo/unavco.png>
 
                             UNAVCO</a></div>
                     <small>[5086 records]</small></td>
@@ -163,7 +163,7 @@
                 <td width=33%>
                     <div title="Driven by data-rich use cases that span geodesy, geodynamics, seismology, and ecohydrology, the BALTO project will enable brokered access to diverse geoscience data, including data that have been collected/organized by individual scientists in novel or unusual forms, also known as “long-tail” datasets. [89 records]">
                         <a href=http://balto.opendap.org><img style="max-width: 80px; max-height: 40px"
-                                                              src=http://balto.opendap.org/opendap/docs/images/logo.png>
+                                                              src=images/repo/balto.png>
 
                             Balto</a></div>
                     <small>[89 records]</small></td>
@@ -181,7 +181,7 @@
                 <td width=33%>
                     <div title="fosters the development of standards, so paleoclimate data are easier to analyze, share, and re-use. [28 records]">
                         <a href=http://iris.edu><img style="max-width: 80px; max-height: 40px"
-                                                     src=http://ds.iris.edu/static/img/layout/logos/iris_logo_shadow.png>IRIS</a>
+                                                     src=images/repo/iris.png>IRIS</a>
                     </div>
                     <small>[28 records]</small>
                 </td>
@@ -197,7 +197,7 @@
                 <td width=33%>
                     <div title="Open Core Data is an implementation of the RDA Digital Object Cloud. Open Core Data contains digital objects from the contintental and ocena drilling research projects funded by the National Science Foundation. [18171 records]">
                         <a href=https://opencoredata.org/><img style="max-width: 80px; max-height: 40px"
-                                                               src=https://opencoredata.org/img/logo22small.png>
+                                                               src=images/repo/opencoredata.png>
 
                             opencoredata</a></div>
                     <small>[18171 records]</small></td>
@@ -207,7 +207,7 @@
                 <td width=33%>
                     <div title="These objects are described using the structured data on the web patterns promoted by the ESIP Science on Schema work. The object landing pages implement FAIR data practices and expose stuctured data in JSON-LD. [4136 records]">
                         <a href=https://www.earthref.org/MagIC><img style="max-width: 80px; max-height: 40px"
-                                                                    src=http://mbobak-ofc.ncsa.illinois.edu/ext/ec/magic/MagIC.png>
+                                                                    src=images/repo/magic.png>
 
                             Magnetics Information Consortium (MagIC)</a></div>
                     <br><small>[4136 records]</small></td>
@@ -215,7 +215,7 @@
                 <td width=33%>
                     <div title="Neotoma is a multiproxy paleoecological database that covers the Pliocene-Quaternary, including modern</div> microfossil samples. The database is an international collaborative effort among individuals from 19 institutions, representing multiple constituent databases. There are over 20 data-types within the Neotoma Paleoecological Database, including pollen microfossils, plant macrofossils, vertebrate fauna, diatoms, charcoal, biomarkers, ostracodes, physical sedimentology and water chemistry. Neotoma provides an underlying cyberinfrastructure that enables the development of common software tools for data ingest, discovery, display, analysis, and distribution, while giving domain scientists control over critical taxonomic and other data quality issues. [11955 records]">
                         <a href=http://www.neotomadb.org/><img style="max-width: 80px; max-height: 40px"
-                                                               src=https://www.neotomadb.org/images/site_graphics/Packrat.png>
+                                                               src=images/repo/neotomadb.png>
 
                             Neotoma</a></div>
                     <small>[11955 records]</small></td>
@@ -223,7 +223,7 @@
                 <td width=33%>
                     <div title="Community-driven preservation, discovery, access, and visualization of geochemical, geochronological, and petrological data. [639 records]">
                         <a href=https://ecl.earthchem.org/home.php><img style="max-width: 80px; max-height: 40px"
-                                                                        src=http://www.earthchem.org/sites/default/files/files/EC_0-1.png>
+                                                                        src=images/repo/earthchem.png>
 
                             earthchem</a></div>
                     <small>[639 records]</small></td>
@@ -233,7 +233,7 @@
                 <td width=33%>
                     <div title="The 'Cross-Domain Observational Metadata for Environmental Sensing (X-DOMES)' is an NSF/EarthCube project tasked to develop prototypes for the application of standards-based description of environmental sensor metadata, including provenance, that is paramount to automated data discovery, access, archival, processing, as well as quality control and assessment. [17 records]">
                         <a href=https://xdomes.tamucc.edu/><img style="max-width: 80px; max-height: 40px"
-                                                                src=https://xdomes.tamucc.edu/images/xdomes_logo.png>
+                                                                src=images/repo/xdomes.png>
 
                             xdomes</a></div>
                     <small>[17 records]</small></td>
@@ -250,7 +250,7 @@
                     <div title="The EarthCube Resource Registry (ECRR) is intended to provide immediate access to a list of EC capabilities to understand what EC is, and what it isn’t. To support this goal, the ECRR project has developed several persistent resources available for wider EarthCube use. [274 records]">
                         <a href=http://www.earthcube.org/resourceregistry/><img
                                 style="max-width: 80px; max-height: 40px"
-                                src=https://raw.githubusercontent.com/earthcube/webui/master/web/uis/webui2/images/logo_earthcube_full_horizontal_small.png>
+                                src=images/repo/resource_registry.png>
 
                             Resource Registry</a></div>
                     <br><small>[274 records]</small></td>
