--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -84,9 +84,10 @@
   </ul>
 
 
+				</div>
   <p>
 
-	 <h5>
+		<h5 class="center m-bottom" class="font_7" style="font-size:26px">
             <p><a id="repo-list"  href=https://www.earthcube.org/council-of-data-facilities>CDF</a> repositories crawled+indexed:  </p>
   </h5>
 
@@ -112,7 +113,7 @@
                                                              src=images/repo/bco-dmo.png>
 
                             Biological and Chemical Oceanography Data Management Office</a></div>
-                    <br><small>[5018 records]</small>
+                    <small>[5018 records]</small>
                 </td>
 
                 <td width=33%>
@@ -131,7 +132,7 @@
                     <div title="IEDA is a community-based facility that serves to support, sustain, and advance the geosciences by providing data services for observational Geoscience data from the Ocean, Earth, and Polar Sciences. IEDA welcomes and encourages investigators to contribute their data to the IEDA collections so that the data can be discovered and reused by a diverse community now and in the future. The IEDA collections are: EarthChem, Geochron, System for Earth Sample Registration (SESAR), Marine Geoscience Data System (MGDS), and USAP Data Center. Meta-Search provided on the portal through IEDA Data Browser http://www.iedadata.org/databrowser. [7147 records]">
                         <a href=http://www.iedadata.org/><img style="max-width: 80px; max-height: 40px"
                                                               src=images/repo/iedadata.png>
-                            >IEDA (Integrated Earth Data Applications)</a></div>
+                            IEDA (Integrated Earth Data Applications)</a></div>
                     <small>[7147 records]</small></td>
 
                 <td width=33%>
@@ -141,7 +142,7 @@
                             <img style="max-width: 80px; max-height: 40px"
                                  src=images/repo/opentopography.png>
                             OpenTopography</a></div>
-                    <br><small>[502 records]</small></td>
+                    <small>[502 records]</small></td>
 
                 <td width=33%>
                     <div title="UNAVCO promotes research by providing access to data that our community of geodetic scientists uses for quantifying the motions of rock, ice and water that are monitored by a variety of sensor types at or near the Earth's surface. After processing, these data enable millimeter-scale surface motion detection and monitoring at discrete points, and high-resolution strain imagery over areas of tens of square meters to hundreds of square kilometers. The data types include GPS/GNSS, imaging data such as from SAR and TLS, strain and seismic borehole data, and meteorological data. Most of these can be accessed via web services. In addition, GPS/GNSS datasets, TLS datasets, and InSAR products are assigned digital object identifiers. [5086 records]">
@@ -210,7 +211,7 @@
                                                                     src=images/repo/magic.png>
 
                             Magnetics Information Consortium (MagIC)</a></div>
-                    <br><small>[4136 records]</small></td>
+                    <small>[4136 records]</small></td>
 
                 <td width=33%>
                     <div title="Neotoma is a multiproxy paleoecological database that covers the Pliocene-Quaternary, including modern</div> microfossil samples. The database is an international collaborative effort among individuals from 19 institutions, representing multiple constituent databases. There are over 20 data-types within the Neotoma Paleoecological Database, including pollen microfossils, plant macrofossils, vertebrate fauna, diatoms, charcoal, biomarkers, ostracodes, physical sedimentology and water chemistry. Neotoma provides an underlying cyberinfrastructure that enables the development of common software tools for data ingest, discovery, display, analysis, and distribution, while giving domain scientists control over critical taxonomic and other data quality issues. [11955 records]">
@@ -253,19 +254,20 @@
                                 src=images/repo/resource_registry.png>
 
                             Resource Registry</a></div>
-                    <br><small>[274 records]</small></td>
+                    <small>[274 records]</small></td>
 
             </tr>
             </tbody>
         </table>
     </div>
     <div class="row">
-
-        <div class="row">
-						<p id="tools">[Infrastructure] Documentation is in the works for this site.  </p>
-
+				<p>
+						 <h4 class="center m-bottom" class="font_7" style="font-size:26px">
+								<p id="tools">[Infrastructure] Documentation is in the works for this site.  </p>
+						 </h4>
             <p>
 
+						<center>
 
                 <a href="./img/geodexv2.png"><img style="width:600px"
                                                   src="https://geocodes.earthcube.org/img/geodexv2.png"></a>
@@ -290,6 +292,8 @@
 
         </div>
     </div>
+
+						</center>
 
 </div>
 
