--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -87,9 +87,11 @@
 				</div>
   <p>
 
+						<center>
 		<h5 class="center m-bottom" class="font_7" style="font-size:26px">
-            <p><a id="repo-list"  href=https://www.earthcube.org/council-of-data-facilities>CDF</a> repositories crawled+indexed:  </p>
+            <p>Council of Data Facilities (<a id="repo-list"  href=https://www.earthcube.org/council-of-data-facilities>CDF</a>) repositories crawled and indexed:  </p>
   </h5>
+						</center>
 
         </div>
         <div class="row">
@@ -119,7 +121,7 @@
                 <td width=33%>
                     <div title="CUAHSI's Hydrologic Information System (CUAHSI-HIS) provides web services, tools, standards and procedures that enhance access to more and better data for hydrologic analysis. [4185 records]">
                         <a href=https://www.cuahsi.org/><img style="max-width: 80px; max-height: 40px"
-                                                             src=images/repo/hydroshare.org.png>
+                                                             src=images/repo/hydroshare.png>
 
                             Consortium of Universities for the Advancement of Hydrologic Science, Inc. (CUAHSI)</a>
                     </div>
@@ -261,13 +263,17 @@
         </table>
     </div>
     <div class="row">
+
+				<p>
+
+        <div class="col-2 hidden-sm"></div>
+        <div class="col-8">
+						<center>
 				<p>
 						 <h4 class="center m-bottom" class="font_7" style="font-size:26px">
-								<p id="tools">[Infrastructure] Documentation is in the works for this site.  </p>
+								 <p id="tools">Infrastructure Documentation<br><small>is in the works for this site</small>  </p>
 						 </h4>
             <p>
-
-						<center>
 
                 <a href="./img/geodexv2.png"><img style="width:600px"
                                                   src="https://geocodes.earthcube.org/img/geodexv2.png"></a>
