use local geodexv2.png

--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -275,8 +275,8 @@
 						 </h4>
             <p>
 
-                <a href="./img/geodexv2.png"><img style="width:600px"
-                                                  src="https://geocodes.earthcube.org/img/geodexv2.png"></a>
+                <a href="./images/geodexv2.png"><img style="width:600px"
+                                                  src="./images/geodexv2.png"></a>
             </p>
         </div>
         <div class="row">
