--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -286,6 +286,10 @@
             var flattened = _.mapObject(item, function (value, key) {
                 if (key === 'kw') {
                     var elements = value.value.split(',')
+                    // if elements is zero, what happens if I return null?
+                    if (elements.length == 1  ){ if (elements[0].trim() === ''){
+                        elements = null;
+                    }}
                     return elements;
                 } if (key === 'placenames') {
                     var elements = value.value.split(',')
@@ -300,6 +304,10 @@
 
             })
             flattened['s3endpoint'] = flattened['g'].replace('urn:gleaner:milled','').replaceAll(':','/')
+            if ( _.isEqual("http///www.bigdata.com/rdf#nullGraph", flattened['s3endpoint'].toString() ) ) {
+                flattened['s3endpoint'] = null;
+            }
+            //  if g is http://www.bigdata.com/rdf#nullGraph then empty value, use empty value if empty, don't show
             return flattened;
         })
         return items; //content.results.bindings;
@@ -345,10 +353,20 @@
                     </div>
                 </div>
                 <div class="card-footer">
+                <div class="row">
+                <span class="col-auto mr-auto">
                      <span class="badge badge-secondary"><%= obj.resourceType %></span>
-                        <a class="card-link" target="_blank" href="<%= obj.disurl %>"><%= obj.disurl %></a>
-                        <a class="card-link "  href="dataset.html?o=<%=  obj.s3endpoint%>.jsonld" >Details</a>
-                         <span class="tool " hidden="true"  ><%= obj.g %></span>
+                     <span class="tool " hidden="true"  ><%= obj.g %></span>
+                  </span>
+                  <span class="col-auto ">
+                       <% if (obj.disurl) {  %>
+                        <a class="card-link " target="_blank" href="<%= obj.disurl %>"><%= obj.disurl %></a>
+                        <% } %>
+<span class="col-auto">
+                        <% if (obj.s3endpoint) {  %>
+                        <a class="card-link " target="_blank" href="dataset.html?o=<%=  obj.s3endpoint%>.jsonld" >Details</a>
+                       <% } %>
+</span></div>
                  </div>
             </div> `;
 
@@ -567,8 +585,9 @@
         var x = `./dataset.html?o=/${gar[gar.length -2]}/${gar[gar.length -1]}.jsonld`;
 
         var sptxt = _.template(
-            `<a  target="_blank" href="<%= x %>"> <span class="badge badge-info">Connected Tools</span></a>
-`);
+        //    `<a  target="_blank" href="<%= x %>"> <span class="badge badge-info">Connected Tools</span></a>`
+                `<span class="badge badge-info">Connected Tools</span>`
+        );
 
         return sptxt({x: x});
     };
