hover over active facet. spacing between keywords

--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -97,10 +97,7 @@
     <!--      }-->
     <!--    </style>-->
 <style>
-    .activeorderby,
-    .activefacet {
-        font-weight: bold;
-    }
+
 </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet"/>
@@ -340,7 +337,7 @@
                     <div class="card-text">
                      <% if (obj.description) {  %><%= obj.description %><% } %>
                     </div>
-                    <div class="card-text">
+                    <div class="card-text pt-2">
                         <% if (obj.kw) {  %> <b>Keywords:</b> <%= obj.kw %><% } %>
                     </div>
                 </div>
