change query to use http in ecrr query

--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -525,10 +525,10 @@
 		 SERVICE <http://132.249.238.169:8080/fuseki/ecrr/query> {
 		  GRAPH <http://earthcube.org/gleaner-summoned>
 		   {
-			  ?rrs schemaold:supportingData ?df.
-				  ?df schemaold:encodingFormat  ?label ;
-					  schemaold:position "input".
-				  ?rrs schemaold:name ?name.
+			  ?rrs schema:supportingData ?df.
+				  ?df schema:encodingFormat  ?label ;
+					  schema:position "input".
+				  ?rrs schema:name ?name.
 		   }
 	   }
 	}`
