--- a/alpha/website/dataset_mock.html
+++ b/alpha/website/dataset_mock.html
@@ -119,7 +119,7 @@ Marine Geoscience Data System (MGDS)</span>
                 <div class="col-4 ">
 
                     <div class="row">
-                        <img src="./images/map.jpg" />
+												<a href=leaflet.html><img src="./images/map.png" /></a>
                     </div>
                     <div class="row font-weight-bold">Downloads</div>
                     <div class="row">
