table-bordercolor=white nsf# smaller-svg

--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -95,7 +95,7 @@
 
         </div>
         <div class="row">
-        <table border="1" class="dataframe">
+        <table border="1" class="dataframe" bordercolor=white>
             <tbody>
             <tr>
 
@@ -363,7 +363,7 @@
 
     <div class="row">
         <div class="col-12">
-						<h6 style="color:white">Work on this site is supported by NSF EarthCube <img src=https://www.nsf.gov/images/logos/NSF_4-Color_bitmap_Logo.png width=38> NSF 21-515</h6>
+						<h6 style="color:white">Work on this site is supported by NSF EarthCube <img src=https://www.nsf.gov/images/logos/NSF_4-Color_bitmap_Logo.png width=38> NSF award #1928208</h6>
             <!-- <h6 style="color:grey">Simple Grid by <a style="color:grey" href="http://zcole.me" target="_blank">Zach Cole</a> -->
             Open source under the <a style="color:grey" href="https://opensource.org/licenses/MIT" target="_blank">MIT
             License</a>
