more local bigger png w/linebreaks

--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -159,7 +159,7 @@
                 <td width=33%>
                     <div title="The Site Survey Data Bank (SSDB) is a repository for site survey data submitted in support of International Ocean Discovery Program (IODP) proposals and expeditions. SSDB serves different roles for different sets of users. [5344 records]">
                         <a href=https://ssdb.iodp.org/><img style="max-width: 180px; max-height: 90px"
-                                                            src=http://ssdb.iodp.org/images/head_logo_PRO.gif>
+																														src=images/repo/ssdb.iodp.png><br>
                             IODP Site Survey Databank</a></div>
                     <small>[5344 records]</small></td>
 
@@ -174,7 +174,7 @@
                 <td width=33%>
                     <div title="The LinkedEarth wiki is an EarthCube-funded platform that: enables the curation of publicly-accessible database by paleoclimate experts, and, fosters the development of standards, so paleoclimate data are easier to analyze, share, and re-use. [17964 records]">
                         <a href=http://wiki.linked.earth><img style="max-width: 180px; max-height: 90px"
-                                                              src=http://wiki.linked.earth/wiki/images/thumb/5/51/EarthLinked_Banner_blue_NoShadow.jpg/440px-EarthLinked_Banner_blue_NoShadow.jpg>
+																															src=images/repo/linked.earth.png><br>
 
                             Linked Earth</a></div>
                     <small>[17964 records]</small></td>
@@ -183,23 +183,24 @@
 
                 <td width=33%>
                     <div title="fosters the development of standards, so paleoclimate data are easier to analyze, share, and re-use. [28 records]">
-                        <a href=http://iris.edu><img style="max-width: 180px; max-height: 40px"
-																										 src=images/repo/iris.png>IRIS</a><br>
+                        <a href=http://iris.edu><img style="max-width: 180px; max-height: 90px"
+																										 src=images/repo/iris.png><br>
+														IRIS</a>
                     </div>
                     <small>[28 records]</small>
                 </td>
 
                 <td width=33%>
                     <div title="OpenSky is the home for NCAR/UCAR research and historical materials as well as other collections of digital assets. Our mission is to provide free and open access to the scientific output and other intellectual resources created at NCAR/UCAR for the advancement of the atmospheric and related sciences. You can reach us at opensky@ucar.edu with any questions. [11672 records]">
-                        <a href=https://data.ucar.edu><img style="max-width: 180px; max-height: 40px"
-                                                           src=https://opensky.ucar.edu/islandora/object/opensky%3Aucommunity/datastream/TN/view>
+                        <a href=https://data.ucar.edu><img style="max-width: 180px; max-height: 90px"
+																													 src=images/repo/ucar.png><br>
 
                             UCAR</a></div>
                     <small>[11672 records]</small></td>
 
                 <td width=33%>
                     <div title="Open Core Data is an implementation of the RDA Digital Object Cloud. Open Core Data contains digital objects from the contintental and ocena drilling research projects funded by the National Science Foundation. [18171 records]">
-                        <a href=https://opencoredata.org/><img style="max-width: 180px; max-height: 40px"
+                        <a href=https://opencoredata.org/><img style="max-width: 180px; max-height: 90px"
 																															 src=images/repo/opencoredata.png><br>
 
                             opencoredata</a></div>
@@ -209,7 +210,7 @@
 
                 <td width=33%>
                     <div title="These objects are described using the structured data on the web patterns promoted by the ESIP Science on Schema work. The object landing pages implement FAIR data practices and expose stuctured data in JSON-LD. [4136 records]">
-                        <a href=https://www.earthref.org/MagIC><img style="max-width: 180px; max-height: 40px"
+                        <a href=https://www.earthref.org/MagIC><img style="max-width: 180px; max-height: 90px"
 																																		src=images/repo/magic.png><br>
 
                             Magnetics Information Consortium (MagIC)</a></div>
@@ -217,7 +218,7 @@
 
                 <td width=33%>
                     <div title="Neotoma is a multiproxy paleoecological database that covers the Pliocene-Quaternary, including modern</div> microfossil samples. The database is an international collaborative effort among individuals from 19 institutions, representing multiple constituent databases. There are over 20 data-types within the Neotoma Paleoecological Database, including pollen microfossils, plant macrofossils, vertebrate fauna, diatoms, charcoal, biomarkers, ostracodes, physical sedimentology and water chemistry. Neotoma provides an underlying cyberinfrastructure that enables the development of common software tools for data ingest, discovery, display, analysis, and distribution, while giving domain scientists control over critical taxonomic and other data quality issues. [11955 records]">
-                        <a href=http://www.neotomadb.org/><img style="max-width: 180px; max-height: 40px"
+                        <a href=http://www.neotomadb.org/><img style="max-width: 180px; max-height: 90px"
 																															 src=images/repo/neotomadb.png><br>
 
                             Neotoma</a></div>
@@ -225,7 +226,7 @@
 
                 <td width=33%>
                     <div title="Community-driven preservation, discovery, access, and visualization of geochemical, geochronological, and petrological data. [639 records]">
-                        <a href=https://ecl.earthchem.org/home.php><img style="max-width: 180px; max-height: 40px"
+                        <a href=https://ecl.earthchem.org/home.php><img style="max-width: 180px; max-height: 90px"
 																																				src=images/repo/earthchem.png><br>
 
                             earthchem</a></div>
@@ -235,7 +236,7 @@
 
                 <td width=33%>
                     <div title="The 'Cross-Domain Observational Metadata for Environmental Sensing (X-DOMES)' is an NSF/EarthCube project tasked to develop prototypes for the application of standards-based description of environmental sensor metadata, including provenance, that is paramount to automated data discovery, access, archival, processing, as well as quality control and assessment. [17 records]">
-                        <a href=https://xdomes.tamucc.edu/><img style="max-width: 180px; max-height: 40px"
+                        <a href=https://xdomes.tamucc.edu/><img style="max-width: 180px; max-height: 90px"
 																																src=images/repo/xdomes.png><br>
 
                             xdomes</a></div>
@@ -243,8 +244,8 @@
 
                 <td width=33%>
                     <div title="The National Ecological Observatory Network (NEON) is a continental-scale observatory designed to gather and provide 30 years of ecological data on the impacts of climate change, land use change and invasive species on natural resources and biodiversity. NEON is a project of the National Science Foundation, with many other U.S. agencies and NGOs cooperating. [179 records]">
-                        <a href=http://www.neonscience.org/><img style="max-width: 180px; max-height: 40px"
-                                                                 src=https://www.neonscience.org/themes/custom/neon/logo.svg>
+                        <a href=http://www.neonscience.org/><img style="max-width: 180px; max-height: 90px"
+																																 src=images/repo/neon.png><br>
 
                             National Ecological Observatory Network (NEON)</a></div>
                     <small>[179 records]</small></td>
