added-clowder-link

--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -89,7 +89,7 @@
 
 						<center>
 		<h5 class="center m-bottom" class="font_7" style="font-size:26px" title="hover over each for a description">
-            <p>Council of Data Facilities (<a id="repo-list"  href=https://www.earthcube.org/council-of-data-facilities>CDF</a>) repositories crawled and indexed:  </p>
+				<p>Council of Data Facilities (<a id="repo-list"  href=https://www.earthcube.org/council-of-data-facilities>CDF</a>) <a href="https://earthcube.clowderframework.org/spaces?size=24" target="_blank">repositories</a> crawled and indexed:  </p>
   </h5>
 						</center>
 
