border30px white

--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -24,7 +24,15 @@
     }
     </script>
 
-
+<style>
+table, th, td {
+  border: 30px  solid white;
+  padding: 5px;
+}
+table {
+  border-spacing: 15px;
+}
+</style>
 
 </head>
 
@@ -95,7 +103,7 @@
 
         </div>
         <div class="row">
-        <table border="1" class="dataframe" bordercolor=lightgrey>
+        <table border="6" class="dataframe" bordercolor=white padding: 15px>
             <tbody>
             <tr>
 
